# styx

./: .gitignore  .goreleaser.yml  .pre-commit-config.yaml  CLAUDE.md  CNAME  GNUmakefile  LICENSE  PLAN.md  README.md  TEST.md  boto3_example.py  go.mod  go.sum  hello.py  install.sh  main.py  pyproject.toml  styx.ipynb  weed_mount.out
.claude/: CLAUDE.md  PLAN.md  TEST.md
.claude/agents/: chaos-tester.md
.github/workflows/: nightly.yml  release.yml
cmd/styx/: bootstrap.go  chaos.go  discover.go  init.go  jobs.go  join.go  nodes.go  root.go  services.go  status.go  stop.go  system.go  tui.go  uninstall.go  version.go
driver/: config.go  driver.go  handle.go  main.go
driver/container/: client.go  types.go
example/: agent.hcl  alpine.nomad  dragonfly.nomad  nats.nomad  nginx-traefik.nomad  nginx-vault.nomad  nginx.nomad  ubuntu.nomad  volumes-demo.nomad
example/test-dragonfly/: go.mod  main.go
internal/api/: api.go  cluster.go  jobs.go  services.go  types.go
internal/bootstrap/: client.go  server.go
internal/config/: consul_templates.go  generator.go  templates.go  vault_templates.go
internal/constants/: ports.go
internal/launchd/: plist.go  service.go
internal/network/: container_network.go  discover.go  ip.go  tailscale.go
internal/proxy/: tcp.go
internal/services/: client.go  jobs.go  services.go
internal/setup/: check.go  install.go  setup.go
internal/tailserve/: serve.go
internal/tls/: certs.go
internal/tui/: app.go
internal/tui/setup/: setup.go
internal/vault/: setup.go
styx-mount/: main.py  pyproject.toml  styx.py
(+4 files in other folders)
