[project]
name = "styx-mount"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiobotocore>=2.19.0",
    "docker>=7.1.0",
    "fastapi[standard]>=0.115.8",
    "ipykernel>=6.29.5",
    "types-aiobotocore[essential]>=2.19.0",
]
